--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 lfs_file.docx filter=lfs diff=lfs merge=lfs -text
-*.png filter=lfs diff=lfs merge=lfs -text
+*.pngg filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
